package com.aiu.trips.enums;

public enum EventCategory {
    FIELD_TRIP,
    SEMINAR,
    CONFERENCE,
    CONCERT
}
