package com.aiu.trips.enums;

public enum EventStatus {
    UPCOMING,
    CANCELLED,
    COMPLETED
}
